Finished implementing image upload/removal functions

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
-h2 {
-    
+.flex-container{
+    display : flex;
+    flex-direction : column;
+    /* justify-content: space-evenly; */
+}
+
+#message_form_div{
+    display: flex;
+    justify-content: center;
+}
+
+#all_media{
+    display : flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+input[type=button]{
+    margin-left: 40px;
 }
