--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,89 @@
+body {
+    background-color: ivory;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+.about{
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.header{
+    position: center;
+    text-align: center;
+    font-size: 28px;
+    color: skyblue; 
+    text-shadow: 0 0 6px #ffffff;
+}
+h2{
+    position: center;
+    text-align: center;
+    font-size: 24px;
+    color: skyblue; 
+    text-shadow: 0 0 6px #ffffff; 
+}
+
+#profile-pic{
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin: 0 auto;
+    padding: 1%;
+
+}
+
+.navbar{
+    background-color: skyblue;
+    color: white;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    position: sticky;
+    top: 0;
+}
+
+.navbar a{
+    padding: 15px;
+    text-align: center;
+    overflow: hidden;
+    text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    color: white;
+    transition: 0.8s;
+}
+
 .flex-container{
     display : flex;
     flex-direction : column;
     /* justify-content: space-evenly; */
+}
+
+textarea{
+    width: 100%;
+    font-size: 18px;
+    padding: 2%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: darkslategray;
+    resize: none;
+    text-indent: 0;
+    border-radius: 10px;
+    resize: none;
+}
+
+#message-header{
+    text-align: center;
+    padding: 2%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+}
+
+#all_media{
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 #message_form_div{
@@ -17,4 +99,48 @@
 
 input[type=button]{
     margin-left: 40px;
+}
+
+#images_div{
+    height: 100%;
+    width:400px;
+    flex-grow: 0;
+    display:inline-flexbox;
+    padding: 1%;
+}
+
+#messages_div{
+    height: 100%;
+    min-width:100px;
+    flex-grow: 1000;
+    display:inline-flexbox;
+    padding: 1%;
+}
+
+#the_msgs{
+    padding: 5px;
+}
+
+img {
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    padding: 4%;
+}
+
+ul{
+    list-style-type: none;
+    padding: 5px 3px;
+    min-height: 25px;
+    overflow-x: auto;
+    overflow-y: auto;
+    text-align: justify;
+    border-radius: 5px;
+}
+
+p{
+    justify-content: center;
+    text-align: center;
 }
