--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: ivory;
+    background-color: #fffff0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -19,7 +19,7 @@ h2{
     position: center;
     text-align: center;
     font-size: 24px;
-    color: skyblue; 
+    color: #87ceeb; 
     text-shadow: 0 0 6px #ffffff; 
 }
 
@@ -99,6 +99,19 @@ textarea{
 
 input[type=button]{
     margin-left: 40px;
+	background-color:#87cfeb;
+	-moz-border-radius:14px;
+	-webkit-border-radius:14px;
+	border-radius:14px;
+	border:1px solid #fffff0;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:6px 20px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
 }
 
 #images_div{
@@ -134,10 +147,13 @@ ul{
     list-style-type: none;
     padding: 5px 3px;
     min-height: 25px;
+    max-width: 550px;
     overflow-x: auto;
     overflow-y: auto;
     text-align: justify;
     border-radius: 5px;
+    background:rgba(214, 214, 214, 0.76);
+
 }
 
 ul li{
